Clean up surface infiltration program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ SET( ${target_name}_depends
   openstudio_model
   openstudio_osversion
   openstudio_contam
+  openstudio_energyplus
   boost_log
 )
 
