Work in progress to update to new OpenStudio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ ENDIF()
 
 SET( OPENSTUDIO_BUILD_DIR "" CACHE PATH "Build or install directory for OpenStudio build to link against")
 
-INCLUDE ( "${OPENSTUDIO_BUILD_DIR}/OpenStudioCore-prefix/src/OpenStudioCore-build/OpenStudioCoreConfig.cmake" )
+INCLUDE ( "${OPENSTUDIO_BUILD_DIR}/OSCore-prefix/src/OSCore-build/OpenStudioCoreConfig.cmake" )
 
 IF(MSVC)
   file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/Products/Debug")
@@ -31,9 +31,9 @@ IF(MSVC)
   file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/Products/RelWithDebInfo")
   LIST( APPEND CMAKE_LIBRARY_PATH ${OPENSTUDIO_LIB_DIR} )
 
-  file(GLOB DEBUG_DLLS "${OPENSTUDIO_BUILD_DIR}/OpenStudioCore-prefix/src/OpenStudioCore-build/Products/Debug/*.dll")
-  file(GLOB RELEASE_DLLS "${OPENSTUDIO_BUILD_DIR}/OpenStudioCore-prefix/src/OpenStudioCore-build/Products/Release/*.dll")
-  file(GLOB RELDBG_DLLS "${OPENSTUDIO_BUILD_DIR}/OpenStudioCore-prefix/src/OpenStudioCore-build/Products/RelWithDebInfo/*.dll")
+  file(GLOB DEBUG_DLLS "${OPENSTUDIO_BUILD_DIR}/OSCore-prefix/src/OSCore-build/Products/Debug/*.dll")
+  file(GLOB RELEASE_DLLS "${OPENSTUDIO_BUILD_DIR}/OSCore-prefix/src/OSCore-build/Products/Release/*.dll")
+  file(GLOB RELDBG_DLLS "${OPENSTUDIO_BUILD_DIR}/OSCore-prefix/src/OSCore-build/Products/RelWithDebInfo/*.dll")
 
   file(COPY ${DEBUG_DLLS} DESTINATION "${CMAKE_BINARY_DIR}/Products/Debug/")
   file(COPY ${RELEASE_DLLS} DESTINATION "${CMAKE_BINARY_DIR}/Products/Release/")
@@ -52,33 +52,41 @@ IF (WIN32)
   set(Boost_USE_STATIC_LIBS ON)  
 ENDIF (WIN32)
 
-SET( Boost_ADDITIONAL_VERSIONS "1.40" )
-FIND_PACKAGE( Boost 1.40.0 REQUIRED COMPONENTS filesystem regex program_options system thread date_time serialization)
+find_package(Boost 1.55.0 COMPONENTS filesystem regex program_options system thread chrono date_time log QUIET)
+
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
-MARK_AS_ADVANCED( Boost_LIB_DIAGNOSTIC_DEFINITIONS )
-ADD_DEFINITIONS( -DBOOST_FILESYSTEM_VERSION=2 )
-
-## Boost-log
-ADD_DEFINITIONS( -DBOOST_LOG_NO_LIB ) # disable autolinking
-ADD_DEFINITIONS( -DBOOST_LOG_SETUP_NO_LIB ) # disable autolinking
-
-SET(BoostLog_DIR "${OPENSTUDIO_BUILD_DIR}/BoostLog-prefix/src/BoostLog-build")
-find_package(BoostLog REQUIRED)
-INCLUDE_DIRECTORIES( ${BoostLog_INCLUDE_DIRS} )
-LINK_DIRECTORIES( ${BoostLog_LIBRARY_DIRS} )
 
 ## Qt
-FIND_PACKAGE (Qt4 4.6.0 COMPONENTS QtCore REQUIRED)
-INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} )
+find_package(Qt5Widgets)
+find_package(Qt5Sql)
+find_package(Qt5Network)
+find_package(Qt5Xml)
+find_package(Qt5WebEngine)
+find_package(Qt5WebEngineWidgets)
+find_package(Qt5Concurrent)
+find_package(Qt5PrintSupport)
 
-# QT_USE_FILE is a variable defined by FIND_PACKAGE( Qt4 ) that contains a path to
-# a CMake script that sets up this directory for building with Qt4
-INCLUDE( ${QT_USE_FILE} )
-MARK_AS_ADVANCED( QT_QMAKE_EXECUTABLE QT_QTMOTIF_INCLUDE_DIR QT_QTMOTIF_LIBRARY_DEBUG QT_QTMOTIF_LIBRARY_RELEASE )
-
-# QT_USE_FILE is a variable defined by FIND_PACKAGE( Qt4 ) that contains a path to
-# a CMake script that sets up this directory for building with Qt4
-INCLUDE( ${QT_USE_FILE} )
+mark_as_advanced(
+  Qt5Concurrent_DIR
+  Qt5Core_DIR
+  Qt5Gui_DIR
+  Qt5Gui_EGL_LIBRARY
+  Qt5Location_DIR
+  Qt5Multimedia_DIR
+  Qt5MultimediaWidgets_DIR
+  Qt5Network_DIR
+  Qt5OpenGL_DIR
+  Qt5Positioning_DIR
+  Qt5PrintSupport_DIR
+  Qt5Qml_DIR
+  Qt5Quick_DIR
+  Qt5Sensors_DIR
+  Qt5Sql_DIR
+  Qt5WebEngine_DIR
+  Qt5WebEngineWidgets_DIR
+  Qt5Widgets_DIR
+  Qt5Xml_DIR
+)
 
 # Dependencies
 
@@ -89,18 +97,18 @@ SET( ${target_name}_depends
   openstudio_utilities
   openstudio_model
   openstudio_osversion
-  openstudio_contam
+  openstudio_airflow
   # openstudio_energyplus
   boost_log
 )
 
 # Resource files
-SET( ${target_name}_qrc
-  resources.qrc
-)
+#SET( ${target_name}_qrc
+#  resources.qrc
+#)
 
 # generate rules for building source files from the resources
-qt4_add_resources(${target_name}_qrcs ${${target_name}_qrc} )
+#qt4_add_resources(${target_name}_qrcs ${${target_name}_qrc} )
 
 # Executables
 
@@ -110,33 +118,22 @@ TARGET_LINK_LIBRARIES( osm2prj
   ${${target_name}_depends}
 )
 
-add_executable(compinf compinf.cpp)
+#add_executable(compinf compinf.cpp)
 
-TARGET_LINK_LIBRARIES( compinf 
-  ${${target_name}_depends}
-)
+#TARGET_LINK_LIBRARIES( compinf ${${target_name}_depends})
 
-add_executable(simplefitinf simplefitinf.cpp)
+#add_executable(simplefitinf simplefitinf.cpp)
 
-TARGET_LINK_LIBRARIES( simplefitinf 
-  ${${target_name}_depends}
-)
+#TARGET_LINK_LIBRARIES( simplefitinf ${${target_name}_depends})
 
-add_executable(epw2wth epw2wth.cpp)
+#add_executable(epw2wth epw2wth.cpp)
 
-TARGET_LINK_LIBRARIES( epw2wth 
-  ${${target_name}_depends}
-)
+#TARGET_LINK_LIBRARIES( epw2wth ${${target_name}_depends})
 
-add_executable(demomodel demomodel.cpp
-	${${target_name}_qrcs})
+#add_executable(demomodel demomodel.cpp ${${target_name}_qrcs})
 
-TARGET_LINK_LIBRARIES( demomodel 
-  ${${target_name}_depends}
-)
+#TARGET_LINK_LIBRARIES( demomodel ${${target_name}_depends})
 
-add_executable(surfinf surfinf.cpp)
+#add_executable(surfinf surfinf.cpp)
 
-TARGET_LINK_LIBRARIES( surfinf
-  ${${target_name}_depends}
-)
+#TARGET_LINK_LIBRARIES( surfinf ${${target_name}_depends})
